# com.polyphase.formats.video

./: .gitignore  CMakeLists.txt  README.md  com.polyphase.formats.video.vcxproj  package.json
.github/workflows/: build.bat  build.sh  native-addon-release.yml
Docs/: 01-GettingStarted.md  02-Formats.md  03-CookPresets.md  04-PlatformSupport.md  05-AssetWorkflow.md  06-RuntimeAPI.md  07-Troubleshooting.md  08-Architecture.md  README.md
Scripts/: VideoMaterialConnector.lua  VideoPlaylistConnector.lua  VideoQuadConnector.lua
Scripts/input/: DemoInputEvents.lua
Scripts/ui/: MainMenu.lua
Source/: EngineAPIAccess.h  VideoPlayer.cpp
Source/Assets/: VideoClip.cpp  VideoClip.h
Source/Backends/: AsyncMediaPump.cpp  AsyncMediaPump.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  IVideoDecoder.h  MvdVideoDecoder.cpp  MvdVideoDecoder.h  NullVideoDecoder.cpp  NullVideoDecoder.h  PcvVideoDecoder.cpp  PcvVideoDecoder.h  StbImageJpeg.cpp  ThpVideoDecoder.cpp  ThpVideoDecoder.h  VideoDecoderFactory.cpp  VideoDecoderFactory.h
Source/Cook/: DolphinVideoCook.cpp  DolphinVideoCook.h  DspAdpcm.cpp  DspAdpcm.h  N3dsMvdCook.cpp  N3dsMvdCook.h  ThpPacker.cpp  ThpPacker.h
Source/Lua/: VideoPlayer3D_Lua.cpp  VideoPlayer3D_Lua.h  VideoPlayer_Lua.cpp  VideoPlayer_Lua.h  VideoPlaylistPlayer_Lua.cpp  VideoPlaylistPlayer_Lua.h
Source/Nodes/: VideoPlayer3D.cpp  VideoPlayer3D.h  VideoPlaylistPlayer.cpp  VideoPlaylistPlayer.h
Source/Playlist/: Playlist.cpp  Playlist.h  PlaylistEvents.cpp  PlaylistEvents.h  PlaylistRegistry.cpp  PlaylistRegistry.h
Source/Util/: AlphaUnpack.cpp  AlphaUnpack.h
